# nextcloud-3.4.2-fork

./: .tag
shell_integration/nautilus/: CMakeLists.txt  install_nextcloud_extension.sh  nextcloud_share_link_generator.py  send_to_nextcloud.py
src/gui/: CMakeLists.txt  CustomizationWindow.cpp  CustomizationWindow.h  CustomizationWindow.ui  addbuttonwindow.cpp  addbuttonwindow.h  addbuttonwindow.ui  customization.ui  generalsettings.cpp  generalsettings.h  generalsettings.ui  personaltab.cpp  personaltab.h  personaltab.ui  studentresources.cpp  studentresources.h  studentresources.ui  systray.cpp  systray.h  themesettings.cpp  themesettings.h  themesettings.ui
src/gui/wizard/: welcomepage.cpp
